deploy/k8s/30-app-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-client
  namespace: nasfaq
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-client
  template:
    metadata:
      labels:
        app: app-client
    spec:
      containers:
        - name: app-client
          image: ghcr.io/jamesac42/nasfaqv2-app-client:IMAGE_TAG
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: app-client
  namespace: nasfaq
spec:
  selector:
    app: app-client
  ports:
    - port: 80
      targetPort: http
      name: http
